--- a/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
+++ b/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
@@ -1,1 +1,5 @@
-<p>AgGridPoc works!</p>
+<ag-grid-angular
+[rowData]="rowData"
+[columnDefs]="colDefs" 
+style="width: 100vw; height: 100vh;" />
+<!-- <div>I am from libs</div> -->
