--- a/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
+++ b/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
@@ -4,5 +4,7 @@
   [rowData]="todoInfo()"
   [columnDefs]="colDefs"
   [defaultColDef]="defaultColDef"
-  [autoSizePadding]="20"
+  [masterDetail]="true"
+  [detailCellRendererParams]="detailCellRendererParams"
+  [groupDefaultExpanded]="groupDefaultExpanded"
 />
