--- a/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
+++ b/libs/ag-grid/src/lib/ag-grid-poc/ag-grid-poc.component.html
@@ -4,7 +4,5 @@
   [rowData]="todoInfo()"
   [columnDefs]="colDefs"
   [defaultColDef]="defaultColDef"
-  [masterDetail]="true"
-  [detailCellRendererParams]="detailCellRendererParams"
-  [groupDefaultExpanded]="groupDefaultExpanded"
+  [autoSizePadding]="20"
 />
