--- a/libs/arc-gis/src/lib/arc-gis-poc/arc-gis-poc.component.html
+++ b/libs/arc-gis/src/lib/arc-gis-poc/arc-gis-poc.component.html
@@ -1,1 +1,14 @@
 <p>ArcGisPoc works!</p>
+
+<!-- <arcgis-map item-id="05e015c5f0314db9a487a9b46cb37eca">
+    <arcgis-zoom position="top-left"></arcgis-zoom>
+</arcgis-map> -->
+
+<arcgis-map item-id="d5dda743788a4b0688fe48f43ae7beb9">
+    <arcgis-placement position="top-left">
+      <button (click)="handleClick()">Click me</button>
+      <arcgis-expand>
+        <arcgis-legend></arcgis-legend>
+      </arcgis-expand>
+    </arcgis-placement>
+  </arcgis-map>
