--- a/libs/arc-gis/src/lib/arc-gis-poc/arc-gis-poc.component.html
+++ b/libs/arc-gis/src/lib/arc-gis-poc/arc-gis-poc.component.html
@@ -1,4 +1,3 @@
-
 <!-- <arcgis-map item-id="05e015c5f0314db9a487a9b46cb37eca">
     <arcgis-zoom position="top-left"></arcgis-zoom>
 </arcgis-map> -->
@@ -11,6 +10,8 @@
       </arcgis-expand>
     </arcgis-placement>
   </arcgis-map> -->
+@for (baseMap of baseMapInput; track $index) {
+<button (click)="changeBaseMap(baseMap)">{{ baseMap }}</button>
+}
 
-
-  <div #eventMap class="event-map"></div>
+<div #eventMap class="event-map"></div>
